fix: Make text visible on dark

--- a/Loader/Loader.module.css
+++ b/Loader/Loader.module.css
@@ -12,3 +12,9 @@
 .text {
   color: #333;
 }
+
+@media (prefers-color-scheme: dark) {
+  .text {
+    color: #999;
+  }
+}
